Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20565

Assertion failure on CHANGE COLUMN…SYSTEM VERSIONING

    XMLWordPrintable

Details

    Description

      The following will trigger a debug assertion failure in InnoDB:

      --source include/have_innodb.inc
      set @@system_versioning_alter_history=keep;
      CREATE TABLE t (alpha INT, b INT) ENGINE=InnoDB WITH SYSTEM VERSIONING;
      ALTER TABLE t CHANGE COLUMN alpha a INT WITHOUT SYSTEM VERSIONING;
      DROP TABLE t;
      

      The assertion failure is as follows:

      10.4 ea0be9e2d63467064292559762887495772240fc

      Version: '10.4.3-MariaDB-debug-log'  socket: '/dev/shm/10.4o/mysql-test/var/tmp/mysqld.1.sock'  port: 16000  Source distribution
      mysqld: /mariadb/10.4o/storage/innobase/handler/handler0alter.cc:9090: bool innobase_rename_or_enlarge_column_try(const dict_table_t *, trx_t *, const char *, ulint, const Field &, const Create_field &, bool): Assertion `col->prtype == prtype' failed.
      

      This is the first affected revision, found by nikitamalyavin.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.5h
                  3.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.