MDEV-20565 Assertion failure on CHANGE COLUMN...SYSTEM VERSIONING

innobase_rename_or_enlarge_column_try(): Relax a debug assertion.
The DATA_VERSIONED bits in dict_col_t::prtype do not affect the
storage format.